[package]
name = "libnero"
version = "0.1.0"
edition = "2024"

[dependencies]
anitomy = { git = "https://github.com/Rapptz/anitomy-rs.git", rev = "c5271be", optional = true }
anyhow = { workspace = true }
mime_guess = { workspace = true }
reqwest = { workspace = true, optional = true }
serde = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
tracing = { workspace = true }
url = { workspace = true, features = ["serde"] }
nero-media-proxy = { path = "../media-proxy" }
nero-extensions = { path = "../extensions" }
wasm-metadata = { workspace = true }
uuid = { version = "1.23.1", features = ["v4"] }

[features]
torrent = ["dep:anitomy", "dep:reqwest", "nero-media-proxy/torrent"]
