[package]
name = "libnero"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
url = { workspace = true, features = ["serde"] }
nero-media-proxy = { path = "../media-proxy" }
nero-extensions = { path = "../extensions" }
wasm-metadata = { workspace = true }
uuid = { version = "1.23.1", features = ["v4"] }

[features]
torrent = ["nero-media-proxy/torrent"]
